# 06_ID_Legal

./: .dockerignore  .env.example  .gitignore  CLAUDE_REVIEW.md  CODEBASE_REVIEW_2025-12-19.md  COMPREHENSIVE_CODE_REVIEW.md  Dockerfile  IMPORT_PATH_FIXES.md  Kaggle_Demo.ipynb  LEGAL_VOCAB_EXPANSION.md  MEMORY_INTEGRATION_VERIFICATION.md  NEXT_SESSION_PROMPT.md  PHASE1_PHASE2_IMPLEMENTATION_SUMMARY.md  RAG_PIPELINE_FIXES.md  README.md  README_ACCURACY_ANALYSIS.md  REVIEW_2025-12-02.md  SEARCH_UI_OPTIMIZATION.md  SESSION_CONTINUATION_PROMPT.md  TESTING_GUIDE.md  TEST_SUMMARY.md  VOCABULARY_EXPANSION_GUIDE.md  WORKFLOW.md  config.py  conftest.py  docker-compose.yml  hardware_detection.py  id-reg-rag-llm-kg-gra-v13.ipynb  kaggle_launcher.py  launch_dev.py  launch_production.py  logger_utils.py  main.py  model_manager.py  pyproject.toml  pytest.ini  requirements.txt  run_test_auto_memory.sh  run_test_safe.py  setup.py  (+3 more)
agents/: README.md  __init__.py  agent_executor.py  tool_registry.py
api/: README.md  __init__.py  server.py  validators.py
config/: __init__.py  indonesian_legal_vocabulary.py  legal_vocab.py  llm_config.py  model_config.py  search_config.py
conversation/: README.md  __init__.py  context_cache.py  conversational_service.py  manager.py  memory_manager.py  session_storage.py
core/: README.md  __init__.py  analytics.py  document_parser.py  example_usage.py  form_generator.py  legal_vocab.py  model_manager.py  test_complete_rag.py
demos/: 01_basic_rag_query.py  04_streaming.py  05_session_management.py  08_full_system_test.py  README.md
docs/: ADVANCED_RETRIEVAL_DESIGN.md  EXPANSION_PHASE1_USAGE.md  MIGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  RAG_ACCURACY_FIXES_2025-12-19.md  RAG_ACCURACY_ISSUE_ANALYSIS.md  RAG_RESULTS_ANALYSIS_ITERATION2.md  api_reference.md  architecture.md  deployment.md  development.md
document_parser/: __init__.py  context_builder.py  exceptions.py  parser.py  storage.py
examples/: data_loader_examples.py  llm_examples.py  modular_search_example.py  performance_example.py
loader/: README.md  __init__.py  dataloader.py  test_dataloader.py
notebooks/: kaggle_setup.ipynb
pipeline/: README.md  __init__.py  batch_pipeline.py  rag_pipeline.py  streaming_pipeline.py
providers/: README.md  __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  local.py  openai_provider.py  openrouter_provider.py
research/: individual_researcher.py
scripts/: benchmarks.py  initialize_system.py  (+4 more)
(+178 files in other folders)
