[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-legal-rag"
version = "1.0.0"
description = "KG-Enhanced Indonesian Legal RAG System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Azzindani"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["rag", "legal", "indonesia", "nlp", "knowledge-graph"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "faiss-cpu>=1.7.4",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
gpu = [
    "faiss-gpu>=1.7.4",
]

[project.scripts]
id-legal = "main:main"
id-legal-api = "api.server:main"
id-legal-ui = "ui.gradio_app:launch_app"

[project.urls]
Homepage = "https://github.com/azzindani/06_ID_Legal"
Repository = "https://github.com/azzindani/06_ID_Legal"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "loader*", "pipeline*", "conversation*", "api*", "ui*", "agents*"]

[tool.pytest.ini_options]
testpaths = ["tests", "conversation/tests", "pipeline/tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "gpu: GPU required",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
